Finally got the delete button to work, not button but submit value

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,7 +15,10 @@
   </head>
   <body>
     <div class="wrapper">
-
+      <nav>
+      <a href="/ferrets">Ferret Home</a>
+      <a href="/ferrets/new">Ferret Camp Signup</a>
+      </nav>
         <%= yield %>
 
       <footer class="branding">
