--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,10 +15,15 @@
   </head>
   <body>
     <div class="wrapper">
+
       <nav>
+      <a href="/login">Log In</a>
+      <a href="/users/new">Sign Up</a>
+      </nav>
+      <%#  <nav>
       <a href="/ferrets">Ferret Home</a>
       <a href="/ferrets/new">Ferret Camp Signup</a>
-      </nav>
+      </nav>%>
         <%= yield %>
 
       <footer class="branding">
