fixed some things in magration foldr, boolean doesnt work for drop off yet, made associations and fixed some things in the views for the ferrets, a user can log in and drop off a ferret so far, gotta implement taking them home too

--- a/app/views/ferrets/new.html.erb
+++ b/app/views/ferrets/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Ferret Signup</h1>
+<h1>Ferret DropOff</h1>
 <form method="post" action="/ferrets">
 <p>
 <div><label for="name">Name</label></div>
