--- a/app/views/ferrets/index.html.erb
+++ b/app/views/ferrets/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Welcome to Ferret Camp.</h1>
-<p> These are our ferrets!</p>
+<h1>Welcome to Ferret Camp!</h1>
+<p> These are our ferrets at the camp today!</p>
 <ul>
 <% @ferrets.each do |ferret| %>
 <li><a href="/ferrets/<%=ferret.id %>"><%= ferret.name %>  <%# ferret.hair %></li>
