starting to get frustrated, everything fine, now I cant make any associations doing what they do in video and its not working

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,6 +23,7 @@
       <% else %>
           <a href="/ferrets">Ferret Home</a>
           <a href="/ferrets/new">Ferret Camp Signup</a>
+          <%#  <a href="/ferrets/:id/adopt">Ferret Adoption</a>%>
        <%#  <form method="" action="/logout">
         <input type="hidden" name="_method" value="delete" />
         <input type="submit" value="LogOut">
