--- a/app/views/ferrets/new.html.erb
+++ b/app/views/ferrets/new.html.erb
@@ -1,17 +1,17 @@
 <h1>Ferret DropOff</h1>
 <form method="post" action="/ferrets">
 <p>
-<div><label for="name">Name</label></div>
+<div><label for="name">WHat is your ferrets name? Name</label></div>
 <input type="text" id="name" name="name" />
 </p>
 
 <p>
-<div><label for="hair">Hair Type</label></div>
+<div><label for="hair">WHat does your ferret look like? Hair Type</label></div>
 <input type="text" id="hair" name="hair" />
 </p>
 
 <p>
-<div><label for="short_description">Short Description</label></div>
+<div><label for="short_description">Please tell us about your ferret</label></div>
 <textarea rows="5" cols="40" id= "short_description" name="short_description"></textarea>
 </p>
 <input type="submit" value="Signup Ferret">
