Finally got the associations to work thank you master dakota, now we can move onto adopting a ferret that has no owner

--- a/app/views/ferrets/new.html.erb
+++ b/app/views/ferrets/new.html.erb
@@ -1,12 +1,12 @@
 <h1>Ferret DropOff</h1>
 <form method="post" action="/ferrets">
 <p>
-<div><label for="name">WHat is your ferrets name? Name</label></div>
+<div><label for="name">What is your ferrets name? Name</label></div>
 <input type="text" id="name" name="name" />
 </p>
 
 <p>
-<div><label for="hair">WHat does your ferret look like? Hair Type</label></div>
+<div><label for="hair">What does your ferret look like? Hair Type</label></div>
 <input type="text" id="hair" name="hair" />
 </p>
 
