--- a/app/views/ferrets/new.html.erb
+++ b/app/views/ferrets/new.html.erb
@@ -1,10 +1,10 @@
-<h1>Ferret DropOff</h1>
+<h1>Ferret Register</h1>
 <form method="post" action="/ferrets">
 <p>
 <div><label for="name">What is your ferrets name? Name</label></div>
 <input type="text" id="name" name="name" />
 </p>
-
+<%#I notice from videos I could put the name= as "ferret[name]" and "ferret[hair]"%>
 <p>
 <div><label for="hair">What does your ferret look like? Hair Type</label></div>
 <input type="text" id="hair" name="hair" />
