--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,7 +22,7 @@
           <a href="/users/new">Sign Up</a>
       <% else %>
           <a href="/ferrets">Ferret Home</a>
-          <a href="/ferrets/new">Ferret Camp Signup</a>
+          <a href="/ferrets/new">Ferret Camp Registration</a>
           <%#  <a href="/ferrets/:id/adopt">Ferret Adoption</a>%>
        <%#  <form method="" action="/logout">
         <input type="hidden" name="_method" value="delete" />
