--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -18,7 +18,14 @@
     font-family: Sans-Serif;
     line-height: 18px;
   }
+  
+  .error {
+    color: red;
+  }
 
+  .success {
+    color: green;
+  }
   .wrapper {
     background: #fff;
     -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
