--- a/app/views/ferrets/adopt.html.erb
+++ b/app/views/ferrets/adopt.html.erb
@@ -1,5 +1,13 @@
+
+
 <h1>Adopt A Ferret</h1>
- 
+<p> These are our ferrets for adoption!</p>
+<ul>
+<% @ffa.each do |ffa| %>
+<li><a href="/ferrets/<%= ffa.id %>"><%= ffa.name %></li>
+<% end %>
+</ul>
+
 <form action="/ferrets/:id/adopt" method="post">
   <label>Owner Name:</label>
   <br>
@@ -10,8 +18,8 @@
  
  
   <h3>Ferrets for Adoption</h3>
-  <% @ferrets.each do |ferret| %>
-    <input type="checkbox" name="user[tags_ids][]" id="<%= @ferret.id %>" value="<%= @ferret.id %>"><%= @ferret.name %></input><br>
+  <% @ffa.each do |ffa| %>
+    <input type="checkbox" name="user[tags_ids][]" id="<%= @ffa.id %>" value="<%= @ffa.id %>"><%= @ffa.name %></input><br>
   <% end %>
   <br>
  
