got some stuff im workoing on, we fixed some stuff for ferret adoption, added the pickup controller, put some routes in there, setup a pickup view but decided it was better to do buttons in show- need to set them up

--- a/app/views/ferrets/index.html.erb
+++ b/app/views/ferrets/index.html.erb
@@ -6,3 +6,11 @@
 <% end %>
 </ul>
 <%# take out the hair, was just testing if worked%>
+
+<h2>Here are your registered ferrets.</h2>
+
+<ul>
+<% current_user.ferrets.each do |ferret| %>
+<li><a href="/ferrets/<%= ferret.id %>"><%= ferret.name %>  <%# ferret.hair %></li>
+<% end %>
+</ul>
