--- a/app/views/ferrets/show.html.erb
+++ b/app/views/ferrets/show.html.erb
@@ -1,10 +1,22 @@
 <h1><%=@ferret.name%></h1>
 <p>Short Description: <%=@ferret.short_description %></p>
 <p>Hair Type: <%=@ferret.hair %></p>
-<p><%= @ferret.user.email %></p>
+<p><%= @ferret.user.try :email %></p>
 <%#maybe an IF statement in here would allow 
 me to display the user only if there us a user%>
-
+<%#we can use this to restrict the ferrets we see but i dont think that fits thi sapplication%>
+<% if authorize_ferret(@ferret)%>
 <a href="/ferrets/<%= @ferret.id %>/edit"><input type="button" value="Edit" /></a>
-<form method="post" action="/ferrets/<%= @ferret.id %>">
-<input type="hidden" value="delete" name="_method"><input type="submit" value="Delete" /></form>
+<form method="post" action="/ferrets/<%= @ferret.id %>" style="display: inline-block;">
+<input type="hidden" value="delete" name="_method"><input type="submit" value="Delete" />
+</form>
+  <%=if @ferret.picked_up%>
+  
+
+  <%= else %>
+
+
+
+<% end %>
+
+<%#might look better without the syled display tbh%>
