final commit before assesment just going over everything, added if statement into the index to display ferrets even if a user has none registered

--- a/app/views/ferrets/index.html.erb
+++ b/app/views/ferrets/index.html.erb
@@ -9,9 +9,10 @@
 <%# take out the hair, was just testing if worked%>
 
 <h2>Here are your registered ferrets.</h2>
-
+<% if logged_in? %>
 <ul>
 <% current_user.ferrets.each do |ferret| %>
 <li><a href="/ferrets/<%= ferret.id %>"><%= ferret.name %>  <%# ferret.hair %></li>
+<% end %>
 <% end %>
 </ul>
