meant to commit yestarday, fixed extra comments and indenting in the users and sessions controller

--- a/app/views/ferrets/adopt.html.erb
+++ b/app/views/ferrets/adopt.html.erb
@@ -36,3 +36,19 @@ and it will appear on the index file,
 A user should be able to pick up or drop off a ferret,
 which will then indicate if they appear on the index page
 and lastly a User should be able to adopt a ferret with no owner%>
+  <%# #FFA = ferret for adoption
+  #I believe I need another model and controller to implement this
+  #get "/ferrets/:id/adopt" do
+  #  @ffa = Ferret.where(user_id: nil)
+  #  erb :"ferrets/adopt.html"
+  #end
+
+ # post "/ferrets/:id/adopt" do
+  #
+   # @ffa = Ferret.find(params[:id])
+   # @ffa.update(ferret_params)
+   # redirect "/ferrets/#{@ffa.id}"
+  #end
+  #
+  #wed also need an adoption get post edit and update 
+  #so that the ferret could be asigned a new ferret %>
